.local/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  labels:
    app.kubernetes.io/name: argocd-server-ingress
    app.kubernetes.io/component: server-ingress
    app.kubernetes.io/part-of: argocd
spec:
  rules:
  - host: argocd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
